--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+  background: yellow;
+}
+
+.h1 {
+  text-align: center;
+  font-size: 100px;
+  color: blue;}
+
 .parent {
   display: flex;
   flex-direction: row;
