--- a/style.css
+++ b/style.css
@@ -39,3 +39,27 @@ body {
   font-weight: bold;
   text-align: center;
 }
+
+@media (max-width: 1200px) {
+    .h1 {
+      font-size: 65px;
+    }
+
+    .h2 {
+      font-size: 48px;
+      padding: 10px 40px;
+      line-height: 1.2em;
+    }
+  }
+
+  @media (min-width: 992px) {
+    .h1 {
+      font-size: 65px;
+    }
+
+    .h2 {
+      font-size: 48px;
+      padding: 10px 40px;
+      line-height: 1.2em;
+    }
+  }
