--- a/style.css
+++ b/style.css
@@ -63,3 +63,15 @@ body {
       line-height: 1.2em;
     }
   }
+
+  @media (max-width: 600px) {
+    .h1 {
+      font-size: 55px;
+    }
+
+    .h2 {
+      font-size: 36px;
+      padding: 10px 30px;
+      line-height: 1.5em;
+    }
+  }
